--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "moment-timezone": "^0.5.38",
     "next": "^13.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.7",
