--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-date-pickers": "^5.0.6",
     "moment-timezone": "^0.5.38",
     "next": "^13.0.0",
+    "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
